--- a/diegolab/rwd-projects/5-personal-portfolio.html
+++ b/diegolab/rwd-projects/5-personal-portfolio.html
@@ -23,7 +23,7 @@
                 </a>
             </li>
             <li>
-                <a href="">
+                <a href="#contact">
                     Contacto
                 </a>
             </li>
@@ -61,6 +61,37 @@
         <div class="project4">Pryecto4</div>
         <div class="project5">Pryecto5</div>
         <div class="project6">Pryecto6</div>
+        <div class="btn">
+            <button>Show all</button>
+        </div>
+        <div id="contact" class="ftr-container">
+            <h2>
+                ¡Trabajemos juntos!
+            </h2>
+            <p>
+                ¿Como tomas tu cafe?
+            </p>
+            <div class="social-media">
+                <div>
+                    <a href="https://www.facebook.com/diego2587" target="_blank">
+                        Facebook
+                    </a></div>
+                <div><a href="https://github.com/Diegogagan2587" target="_blank">
+                    Github</a></div>
+                <div><a href="https://twitter.com/dieg02587" target="_blank">
+                    Twitter</a></div>
+                <div><a href="mailto:diego27796gagan@gmail.com" target="_blank">
+                    @Enviame un email</a></div>
+                <div><a href="https://wa.me/529934320592" target="_blank">
+                    WhatssApp</a></div>
+            </div>
+            <hr>
+            <footer>
+                <p>
+                    @Creado por Diego Vidal
+                </p>
+            </footer>
+        </div>
     </div>
     <!--Ends Projects-->
     
