--- a/diegolab/rwd-projects/5-personal-portfolio.html
+++ b/diegolab/rwd-projects/5-personal-portfolio.html
@@ -55,10 +55,19 @@
                 Aqui hay algunos de mis proyectos:
             </h2>
         </div>
-        <div class="project1">Pryecto1</div>
-        <div class="project2">Pryecto2</div>
-        <div class="project3">Pryecto3</div>
-        <div class="project4">Pryecto4</div>
+        <div class="project1">Pryecto1
+            <img src="../../images/portfolio-dvl/portfoliodvl.png" 
+            alt="picture of Diego Portfolio">s
+        </div>
+        <div class="project2">Pryecto2
+            <img src="../../images/portfolio-dvl/landing-page.png" alt="">
+        </div>
+        <div class="project3">Pryecto3
+            <img src="../../images/portfolio-dvl/technical-page.png" alt="">
+        </div>
+        <div class="project4">Pryecto4
+            <img src="../../images/portfolio-dvl/Tribute-page.png" alt="">
+        </div>
         <div class="project5">Pryecto5</div>
         <div class="project6">Pryecto6</div>
         <div class="btn">
