We made chages to the page Profesional portfolio

--- a/diegolab/rwd-projects/5-personal-portfolio.html
+++ b/diegolab/rwd-projects/5-personal-portfolio.html
@@ -44,6 +44,9 @@
                 <p>
                     ¡Siempre mejorando!
                 </p>
+                <p>
+                    +52 993 432 0592
+                </p>
             </div>
         </div>
     </header>
@@ -55,21 +58,34 @@
                 Aqui hay algunos de mis proyectos:
             </h2>
         </div>
-        <div class="project1">Pryecto1
+        <div class="project1">¡Hola Soy Diego Vidal!
             <img src="../../images/portfolio-dvl/portfoliodvl.png" 
-            alt="picture of Diego Portfolio">s
+            alt="picture of Diego Portfolio">
+            <a href="#">Mi Pagina Web Personal</a>
         </div>
-        <div class="project2">Pryecto2
-            <img src="../../images/portfolio-dvl/landing-page.png" alt="">
+        <div class="project2">Original Trombones
+            <img src="../../images/portfolio-dvl/landing-page.png">
+            <a href="../../product-landing-page/index.html" target="_blank">Revisa esta landing page</a>
         </div>
-        <div class="project3">Pryecto3
+        <div class="project3">JS Documentation
             <img src="../../images/portfolio-dvl/technical-page.png" alt="">
+            <a href="../rwd-projects/4-technical-Documentation-page.html" target="_blank">
+            Tambien realize una pagina de documentacion Tecnica
+            </a>
         </div>
-        <div class="project4">Pryecto4
+        <div class="project4">Dr. Norman Borleaug
             <img src="../../images/portfolio-dvl/Tribute-page.png" alt="">
+            <a href="../rwd-projects/1-tribute-page.html" target="_blank">
+            Mi primera pagina trituto</a>
         </div>
-        <div class="project5">Pryecto5</div>
-        <div class="project6">Pryecto6</div>
+        <div class="project5">Proyecto 5
+            <p>¡Tu proyecto!</p>
+        </div>
+        <div class="project6">Proyecto 6
+            <p>
+                ¡tu proyecto!
+            </p>
+        </div>
         <div class="btn">
             <button>Show all</button>
         </div>
