--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
       <link href="estilos.css" rel="stylesheet" type="text/css"> 
       <meta name="tu pagina web" 
      content="Programacion de tu pagina web"  >
-      <script>
-
-      </script>
+     <script data-ad-client="ca-pub-7905466002332675" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
       <style>
 
       </style>
