WE change the nav bar in some pages

--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -1,20 +1,40 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <!--<link href="../reset.css" rel="stylesheet" type="text/css"> -->
     <link rel="stylesheet" href="diegolab.css">
 </head>
-
 <body>
-    <nav class="main-nav-bar">
-        <ul class="main-list-nav">
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="../blog/mainblog.html">Blog</a></li>
-            <li><a href="../portfolio/portfolio-of-work.html">Portfolio of work</a></li>
-            <li><a href="#">Diego Lab</a></li>
-        </ul>
-    </nav>
+        <!--Start navigation bar-->
+        <nav class="nav-container">
+            <ul>
+                <li>
+                    <a href="../index.html">
+                        Home
+                    </a>
+                </li>
+                <li>
+                    <a href="../blog/mainblog.html">
+                        Blog
+                    </a>
+                </li>
+                <li>
+                    <a href="../portfolio/portfolio-of-work.html">
+                        Portafolio of Work
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        DiegoLab
+                    </a>
+                </li>
+                <li>
+                    <a href="../portfolio/curriculumn/cvdiego-vidal-lopez.html">
+                        CV
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <!--Ends Nav bar-->
     <div class="main-page-container">
         <header>
             <h1 class="title-color title-border">Diego Lab</h1>
@@ -22,19 +42,20 @@
                 where I will Share in all my knowledge with you!
             </p>
         </header>
+        <!--Starts LEarn how to learn-->
         <div id="learn-how-to-learn" class="learn-main-container">
             <h2>
                 Aprende como aprender
             </h2>
             <div class="lrn-wks-container">
                 <div id="week1">
-                    <h3><a href="learn-to-learn/learning.html" target="_blank">Semana 1</a>
+                    <h3><a href="learn-to-learn/learning.html" target="_blank" class="font-color-black">Semana 1</a>
                         <br> ¿Que es aprender?</h3>
                     <hr>
                     <h4>
                         Pensamiento enfocado contra difuso
                     </h4>
-                    <h5><a href="learn-to-learn/learning.html" target="_blank">
+                    <h5><a href="learn-to-learn/learning.html" target="_blank" class="font-color-black">
                             Introduccion al modo Enfocado y modo difuso</a>
                     </h5>
                     <h5>
@@ -213,6 +234,7 @@
                 </div>
             </div>
         </div>
+        <!--Ends Learn How to Learn-->
         <div id="responsive-web-desing">
             <h2>
                 Como Crear un Menu desplegable
