--- a/portfolio/curriculumn/cvdiego-vidal-lopez.html
+++ b/portfolio/curriculumn/cvdiego-vidal-lopez.html
@@ -10,15 +10,37 @@
         <title>CV Diego Vidal</title>
     </head>
     <body>
-        <nav class="main-nav-bar">
-            <ul class="main-list-nav">
-                <li><a href="../../index.html">Home</a></li>
-                <li><a href="../../blog/mainblog.html">Blog</a></li>
-                <li><a href="../portfolio-of-work.html">Portfolio of work</a></li>
-                <li><a href="../../diegolab/diegolab.html">Diego Lab</a></li>
-                <li><a href="#">Curriculumn</a></li>
+        <!--Start navigation bar-->
+        <nav class="nav-container">
+            <ul>
+                <li>
+                    <a href="../../index.html">
+                        Home
+                    </a>
+                </li>
+                <li>
+                    <a href="../../blog/mainblog.html">
+                        Blog
+                    </a>
+                </li>
+                <li>
+                    <a href="../portfolio/portfolio-of-work.html">
+                        Portafolio of Work
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        DiegoLab
+                    </a>
+                </li>
+                <li>
+                    <a href="../portfolio/curriculumn/cvdiego-vidal-lopez.html">
+                        CV
+                    </a>
+                </li>
             </ul>
         </nav>
+        <!--Ends Nav bar-->
         <div class="main-page-container">
         <header>
             <h1>Diego Vidal Lopez</h1>
