We change de anchor colo into diego lab

--- a/portfolio/curriculumn/cvdiego-vidal-lopez.html
+++ b/portfolio/curriculumn/cvdiego-vidal-lopez.html
@@ -24,17 +24,17 @@
                     </a>
                 </li>
                 <li>
-                    <a href="../portfolio/portfolio-of-work.html">
+                    <a href="../portfolio-of-work.html">
                         Portafolio of Work
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="../../diegolab/diegolab.html">
                         DiegoLab
                     </a>
                 </li>
                 <li>
-                    <a href="../portfolio/curriculumn/cvdiego-vidal-lopez.html">
+                    <a href="#">
                         CV
                     </a>
                 </li>
