--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -278,30 +278,83 @@
             <h2>
                 Diseño Web Adaptativo
             </h2>
-            <!--Titulo de Temas Desplegables-->
-            <a id="topic-responsive-web-design" href="#t1">
+            <!--Temas Desplegables-->
+            <a href="#t1">
                 <h3>
-                    Principios de dieseño Web
+                    HTML y HTML5 Basico
+                </h3>
+            </a>
+            <a href="#t2">
+                <h3>
+                    CSS Basico
+                </h3>
+            </a>
+            <div id="t2">
+
+            </div>
+            <a href="#t3">
+                <h3>
+                    Diseño Visual Aplicado
+                </h3>
+            </a>
+            <div id="t3">
+
+            </div>
+            <a href="#t4">
+                <h3>
+                    Accesibilidad aplicada
+                </h3>
+            </a>
+            <div id="t4">
+
+            </div>
+            <a id="topic-responsive-web-design" href="#t5">
+                <h3>
+                    Principios de diseño Web
                     adaptativo o "responsive"
                 </h3>
             </a>
-            <div id="t1">
+            <div id="t5">
                 <p>
-                    Lorem ipsum dolor sit, amet consectetur
-                    adipisicing elit. Praesentium maxime dolores
-                    nostrum ipsam quam tenetur nesciunt sit
-                    sequi quae nobis, itaque dolore doloribus
-                    animi culpa molestiae consectetur, aut iusto!
-                    Saepe.Marca numero 1
+                    Hoy en dia, Hay muchos tipos de dispositivos
+                    que pueden acceder a la Web. Ellos van desde grandes
+                    computadoras de escritorio a pequeños telefonos 
+                    mobiles. Estos dispositivos tienen diferentes tamaños
+                    de pantallas, resoluciones y poder de procesamiento
+                    . Diseño Web responsive es un acercamiento a el
+                    diseño de contenido web que responda a las restricciones
+                    de diferentes dispositivos. La estructura de la pagina
+                    y las reglas CSS deberian ser flexibles para acomodar
+                    estas diferencias. En general, Diseñar la pagina CSS
+                    para tu audiencia objetivo. Si tu esperas que la mayoria
+                    de tu trafico sea de los usuarios moviles,  toma un
+                    acercamiento desde movil primero. Luego agrega 
+                    reglas condicionales para tamaños de pantallas 
+                    mas grandes si tus visitantes son usuarios de
+                    esritorio,  diseña entonces para pantallas grandes
+                    con reglas de condicion  para tamaños mas pequeños.
+                    CSS te da las herramientas para escrivir diferentes
+                    reglas de estilo, entonces las aplicamos dependiendo
+                    de el dispositivo que este visualizando la pagina.
+                    Esta seccion cubrira la manera basica de usar CSS
+                    para Diseño Web REsponsive o adaptable.
+                    <ul>
+                        <li>
+                            <a href="media-queries/01-create-media-quuerie.html">
+                                <h4>
+                                    Crear una "Media Query"
+                                </h4>
+                            </a>
+                        </li>
+                    </ul>
                 </p>
             </div>
-            <!--Titulo de Temas Desplegables-->
-            <a id="topic-css-flexbox" href="#t2">
+            <a id="topic-css-flexbox" href="#t6">
                 <h3>
                     CSS Flexbox
                 </h3>
             </a>
-            <div id="t2">
+            <div id="t6">
                 <h4>
                     Introduccion a Flexbox
                 </h4>
@@ -458,13 +511,12 @@
                     </li>
                 </ul>
             </div>
-            <!--Titulo de Temas Desplegables-->
-            <a id="topic-css-grid" href="#t3">
+            <a id="topic-css-grid" href="#t7">
                 <h3>
                     CSS grid
                 </h3>
             </a>
-            <div id="t3">
+            <div id="t7">
                 <p>
                     Lorem ipsum dolor sit, amet consectetur
                     adipisicing elit. Dolor mollitia unde
@@ -579,13 +631,12 @@
                     </li>
                 </ul>
             </div>
-            <!--Titulo de Temas Desplegables-->
-            <a id="rwd-projects" href="#t4">
+            <a id="rwd-projects" href="#t8">
                 <h3>
                     Proyectos de Diseño Web Responsive(Adaptable)
                 </h3>
             </a>
-            <div id="t4">
+            <div id="t8">
                 <ul>
                     <li>
                         <a href="rwd-projects/1-tribute-page.html" target="_blank">
