We  made a new page and linked into diego lab, We Change the Style of the nav bar into Diego Vidal Landing page

--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -340,9 +340,16 @@
                     para Diseño Web REsponsive o adaptable.
                     <ul>
                         <li>
-                            <a href="media-queries/01-create-media-quuerie.html">
+                            <a href="media-queries/01-create-media-quuerie.html" target="_blank">
                                 <h4>
                                     Crear una "Media Query"
+                                </h4>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="media-queries/04-responsive-tipografhy.html" target="_blank">
+                                <h4>
+                                    Haz una tipografia responsiva
                                 </h4>
                             </a>
                         </li>
