We made changes into diegolab

--- a/diegolab/diegolab.html
+++ b/diegolab/diegolab.html
@@ -276,7 +276,7 @@
                  desplegable-->
             <!--titulo Menu Desplegable-->
             <h2>
-                Diseño Web Adaptativo
+                Diseño Web Adaptativo o Responsive
             </h2>
             <!--Temas Desplegables-->
             <a href="#t1">
@@ -341,16 +341,13 @@
                     <ul>
                         <li>
                             <a href="media-queries/01-create-media-quuerie.html" target="_blank">
-                                <h4>
                                     Crear una "Media Query"
-                                </h4>
                             </a>
                         </li>
                         <li>
                             <a href="media-queries/04-responsive-tipografhy.html" target="_blank">
-                                <h4>
                                     Haz una tipografia responsiva
-                                </h4>
+
                             </a>
                         </li>
                     </ul>
