First commit on this branch, Currently working on redesing the layout of the Diego Vidal's cv page

--- a/portfolio/curriculumn/cvdiego-vidal-lopez.html
+++ b/portfolio/curriculumn/cvdiego-vidal-lopez.html
@@ -14,6 +14,127 @@
         <nav class="nav-container">
             <ul>
                 <li>
+                    <a href="#aboutme">
+                        Acerca de mi
+                    </a>
+                </li>
+                <li>
+                    <a href="#projects">
+                        Mis Trabajos
+                    </a>
+                </li>
+                <li>
+                    <a href="#contact">
+                        Contacto
+                    </a>
+                </li>
+                <li>
+                    <a href="diegolab/diegolab.html">
+                        DiegoLab
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <!--Ends Nav bar-->
+        <!--Start Welcome section-->
+        <header>
+            <div id="aboutme" class="welcome-section">
+            <img src="images/Soy Diego.jpg" alt="diego vidal's picture">
+                <div class="aboutme">
+                    <h1>
+                        ¡Hola! Soy Diego Vidal
+                    </h1>
+                    <h2>
+                        Un desarrollador Web
+                    </h2>
+                    <p>
+                        ¡Siempre mejorando!
+                    </p>
+                    <p id="cellphone">
+                        +52 993 432 0592
+                    </p>
+                </div>
+            </div>
+        </header>
+        <!--End Welcome Section-->
+        <!--Start Projects-->
+        <div id="projects" class="projects">
+            <div class="projects-title"> 
+                <h2>
+                    Aqui hay algunos de mis proyectos:
+                </h2>
+            </div>
+            <div class="project1">¡Hola Soy Diego Vidal!
+                <img src="images/portfolio-dvl/portfoliodvl.png" 
+                alt="picture of Diego Portfolio">
+                <a href="diegolab/rwd-projects/5-personal-portfolio.html">Mi Pagina Web Personal</a>
+            </div>
+            <div class="project2">Original Trombones
+                <img src="images/portfolio-dvl/landing-page.png">
+                <a href="product-landing-page/index.html" target="_blank">Revisa esta landing page</a>
+            </div>
+            <div class="project3">JS Documentation
+                <img src="images/portfolio-dvl/technical-page.png" alt="">
+                <a href="diegolab/rwd-projects/4-technical-Documentation-page.html" target="_blank">
+                Tambien realize una pagina de documentacion Tecnica
+                </a>
+            </div>
+            <div class="project4">Dr. Norman Borleaug
+                <img src="images/portfolio-dvl/Tribute-page.png" alt="">
+                <a href="diegolab/rwd-projects/1-tribute-page.html" target="_blank">
+                Mi primera pagina trituto</a>
+            </div>
+            <div class="project5">Proyecto 5
+                <p>¡Tu proyecto!</p>
+            </div>
+            <div class="project6">Proyecto 6
+                <p>
+                    ¡tu proyecto!
+                </p>
+            </div>
+            <div class="btn">
+                <button>Show all</button>
+            </div>
+            <div id="contact" class="ftr-container">
+                <h2>
+                    ¡Trabajemos juntos!
+                </h2>
+                <p>
+                    ¿Como tomas tu cafe?
+                </p>
+                <div class="social-media">
+                    <div>
+                        <a href="https://www.facebook.com/diego2587" target="_blank">
+                            Facebook
+                        </a></div>
+                    <div><a href="https://github.com/Diegogagan2587" target="_blank">
+                        Github</a></div>
+                    <div><a href="https://twitter.com/dieg02587" target="_blank">
+                        Twitter</a></div>
+                    <div><a href="mailto:diego27796gagan@gmail.com" target="_blank">
+                        @Enviame un email</a></div>
+                    <div><a href="https://wa.me/529934320592" target="_blank">
+                        WhatssApp</a></div>
+                </div>
+                <hr>
+                <footer>
+                    <p>
+                        &copy; @Creado por Diego Vidal
+                    </p>
+                </footer>
+            </div>
+        </div>
+        <!--Ends Projects-->
+        
+    </body>
+
+
+    
+    <oldbody>
+        <!--Start navigation bar-->
+       <!-- <nav class="nav-container">
+            <ul>
+                <li>
                     <a href="../../index.html">
                         Home
                     </a>
@@ -33,13 +154,8 @@
                         DiegoLab
                     </a>
                 </li>
-                <li>
-                    <a href="#">
-                        CV
-                    </a>
-                </li>
             </ul>
-        </nav>
+        </nav>-->
         <!--Ends Nav bar-->
         <div class="main-page-container">
         <header>
@@ -206,5 +322,5 @@
 
             </div>
         </div>
-    </body>
+    </oldbody>
 </html>
