We add all infromation from the old cv to the new cv but need to be ordened or sort to a correct display

--- a/portfolio/curriculumn/cvdiego-vidal-lopez.html
+++ b/portfolio/curriculumn/cvdiego-vidal-lopez.html
@@ -74,27 +74,163 @@
     <!--End Welcome Section-->
     <!--Start Projects-->
     <div id="projects" class="projects">
+        <div id="datos-personales">
+            <h2>
+                Datos personales
+            </h2>
+            <p>
+                <strong>Nombre</strong> Diego Vidal Lopez
+            </p>
+            <p>Hombre, 23 Años</p>
+            <p>
+                <strong>Fecha de naciemiento</strong>
+                27 de julio de 1996
+            </p>
+            <p>
+                <strong>Direccion</strong>
+                Cda. Rancho S Lucia 2
+                Fracc. Villa De Los Claustros,
+                Villahermosa, Tabasco. CP 86288
+            </p>
+            <p>
+                <strong>Telefono</strong>
+                +52 993 432 0592
+            </p>
+            <p>
+                <strong>Email</strong>
+                diego27796gagan@gmail.com
+            </p>
+        </div>
+        <div id="mi-perfil">
+            <h2>
+                Perfil
+            </h2>
+            <p>
+                <Strong>Idiomas:</Strong>
+                Español (Lengua Materna)
+                Ingles (Basico - Aprendiendo 
+                en la acctualidad)
+            </p>
+            <p>
+                <strong>Herramientas Digitales:</strong>
+                Familiraziado con Android. windows, Ubuntu 
+                Office, Actual mente Aprendiendo HTML y CSS
+            </p>
+            <p id="more-about-me">
+                <strong>Algo mas sobre mi:</strong>
+                Mi trayectoria me ha permitido participar en el
+                sector alimentos, y ventas retail como promotor,
+                me encanta siempre estar aprendiendo y me satisface 
+                mucho el lograr objetivos. Como persona tiendo a ser paciente
+                calmado y equilibrado. Suelo aceptar sin irritarme la mayoria
+                de las situaciones, lo cual me permite manejar trabajo bajo
+                presion simepre y con un objetivo bien definido.
+                Soy Cooperativo y colaborador por naturaleza,  se escuchar
+                y la empatia me ayuda a armonizar las relaciones en grupos
+                de trabajo y soy eficas trabajando en equipos. Me encanta
+                compartir mis ideas de forma clara para evitar malentendidos
+                pero siempre tomando en cuenta opiniones construtivas.
+                En general me siento comodo aprendiendo
+                a identificar tendencias y modelos en los datos eh informacion
+                y soy eficaz haciendo preguntas claves de diagnostico antes
+                de resolver un problema o conflicto.
+                <hr>
+            </p>
+        </div>
+        <div id="mi-trayectoria">
+            <h2>Mi trayectoria </h2>
+            <h3>
+                2018-2020 Asesoria En Vanguardia Y Diseño 
+                MCB del Norte. 
+            </h3>
+            <p>
+                Desempeño funciones de Promotor-Demostrador
+                para la marca GIVENCHY en una de las
+                sucursales de la cadena LIVERPOOL.
+                Mi atencion a a los clientes
+                y mi atencion a la marca me han permitido
+                desempeñar mi trabajo con compromiso y 
+                responsabilidad!
+            </p>
+            <h3>
+                2016-2018 Multiservicios OG del Sureste
+            </h3>
+            <p>
+                realize labores como 
+                <strong>Auxiliar administrativo</strong>,
+                 Facturacion,
+                inventarios, Capturista de datos,
+                atencion a clientes entre otras
+                actividades genericas como especiales.
+                Linea: 993 160 2043
+            </p>
+            <h3>
+                2014-2016 La norteña Grill, Suc. Galerias, 
+                Altabrisa y sendero.
+            </h3>
+            <p>
+                <strong>Cajero Vendedor</strong>
+                Realize labores de venta en mostrador,
+                elaboracion de facturas por medio de aspel,
+                Verificacion de pedidos a provedor,
+                Tel. Suc Sendero 357 2868
+            </p>
+            <h3>
+                2011-2015 COBATAB plantel 24
+            </h3>
+            <p>
+                Estudie en el Colegio de Bachilleres 
+                de el estado de Tabasco Plantel 25,
+                Mi principal virtud fue el trabajo en
+                equipo.
+                puedes conocer el
+                <a href="http://cobatab.edu.mx/index.html"
+                target="_blank">
+                COBATAB</a> aqui.
+            </p>
+            <h3>
+                2010-2011 Ensamble y Manetenimiento 
+                de PC - Compuline Parrilla, Tab, Mex.
+            </h3>
+            <p>
+                Tome un curso que me permitio conocer las
+                partes fundamentales de un equipo de computo
+                y como mantere su correcto funcionamiento.
+            </p>
+            <h3>
+                2008-2010 Curso Operacion de Equipo de computo
+                PC Windows
+            </h3>
+            <p>
+                Tome curso con duracion de 2 años
+                que me permitio el uso de herramientas
+                de software basados en SO Windows, Aprendi
+                las bases para usar un ordenador.
+                Adquiri conocimientos basicos en Office,
+                Windows, CorelDrawn, AutoCAd entre otros.
+            </p>
+        </div>
         <div class="projects-title">
             <h2>
                 Aqui hay algunos de mis proyectos:
             </h2>
         </div>
         <div class="project1">¡Hola Soy Diego Vidal!
-            <img src="images/portfolio-dvl/portfoliodvl.png" alt="picture of Diego Portfolio">
+            <img src="../../images/portfolio-dvl/portfoliodvl.png" alt="picture of Diego Portfolio">
             <a href="diegolab/rwd-projects/5-personal-portfolio.html">Mi Pagina Web Personal</a>
         </div>
         <div class="project2">Original Trombones
-            <img src="images/portfolio-dvl/landing-page.png">
+            <img src="../../images/portfolio-dvl/landing-page.png">
             <a href="product-landing-page/index.html" target="_blank">Revisa esta landing page</a>
         </div>
         <div class="project3">JS Documentation
-            <img src="images/portfolio-dvl/technical-page.png" alt="">
+            <img src="../../images/portfolio-dvl/technical-page.png" alt="">
             <a href="diegolab/rwd-projects/4-technical-Documentation-page.html" target="_blank">
                 Tambien realize una pagina de documentacion Tecnica
             </a>
         </div>
         <div class="project4">Dr. Norman Borleaug
-            <img src="images/portfolio-dvl/Tribute-page.png" alt="">
+            <img src="../../images/portfolio-dvl/Tribute-page.png" alt="">
             <a href="diegolab/rwd-projects/1-tribute-page.html" target="_blank">
                 Mi primera pagina trituto</a>
         </div>
@@ -141,162 +277,4 @@
     <!--Ends Projects-->
 
 </body>
-<!--
-    <oldbody>
-        <div class="main-page-container">
-        <header>
-            <h1>Diego Vidal Lopez</h1>
-            <hr>
-        </header>
-            <div class="img-objetive-container">
-            <img id="diego-vidalimg" 
-            src="../../images/diego-vidal-2.jpg" 
-            alt="Diego Vidal's profile pictures">
-            <div id="info-container">
-                <div class="objetive">
-                    <h2>
-                        Datos personales
-                    </h2>
-                    <p>
-                        <strong>Nombre</strong> Diego Vidal Lopez
-                    </p>
-                    <p>Hombre, 23 Años</p>
-                    <p>
-                        <strong>Fecha de naciemiento</strong>
-                        27 de julio de 1996
-                    </p>
-                    <p>
-                        <strong>Direccion</strong>
-                        Cda. Rancho S Lucia 2
-                        Fracc. Villa De Los Claustros,
-                        Villahermosa, Tabasco. CP 86288
-                    </p>
-                    <p>
-                        <strong>Telefono</strong>
-                        +52 993 432 0592
-                    </p>
-                    <p>
-                        <strong>Email</strong>
-                        diego27796gagan@gmail.com
-                    </p>                    
- 
-            </div>
-        </div>      
-            </div>
-            <hr>
-                <hr>
-                <h2>
-                    Perfil
-                </h2>
-                <p>
-                    <Strong>Idiomas:</Strong>
-                    Español (Lengua Materna)
-                    Ingles (Basico - Aprendiendo 
-                    en la acctualidad)
-                </p>
-                <p>
-                    <strong>Herramientas Digitales:</strong>
-                    Familiraziado con Android. windows, Ubuntu 
-                    Office, Actual mente Aprendiendo HTML y CSS
-                </p>
-                <p id="more-about-me">
-                    <strong>Algo mas sobre mi:</strong>
-                    Mi trayectoria me ha permitido participar en el
-                    sector alimentos, y ventas retail como promotor,
-                    me encanta siempre estar aprendiendo y me satisface 
-                    mucho el lograr objetivos. Como persona tiendo a ser paciente
-                    calmado y equilibrado. Suelo aceptar sin irritarme la mayoria
-                    de las situaciones, lo cual me permite manejar trabajo bajo
-                    presion simepre y con un objetivo bien definido.
-                    Soy Cooperativo y colaborador por naturaleza,  se escuchar
-                    y la empatia me ayuda a armonizar las relaciones en grupos
-                    de trabajo y soy eficas trabajando en equipos. Me encanta
-                    compartir mis ideas de forma clara para evitar malentendidos
-                    pero siempre tomando en cuenta opiniones construtivas.
-                    En general me siento comodo aprendiendo
-                    a identificar tendencias y modelos en los datos eh informacion
-                    y soy eficaz haciendo preguntas claves de diagnostico antes
-                    de resolver un problema o conflicto.
-                    <hr>
-                </p>
-
-                </p>
-            
-            <div id="trajectory">
-                <h2>Mi trayectoria </h2>
-                <h3>
-                    2018-2020 Asesoria En Vanguardia Y Diseño 
-                    MCB del Norte. 
-                </h3>
-                <p>
-                    Desempeño funciones de Promotor-Demostrador
-                    para la marca GIVENCHY en una de las
-                    sucursales de la cadena LIVERPOOL.
-                    Mi atencion a a los clientes
-                    y mi atencion a la marca me han permitido
-                    desempeñar mi trabajo con compromiso y 
-                    responsabilidad!
-                </p>
-                <h3>
-                    2016-2018 Multiservicios OG del Sureste
-                </h3>
-                <p>
-                    realize labores como 
-                    <strong>Auxiliar administrativo</strong>,
-                     Facturacion,
-                    inventarios, Capturista de datos,
-                    atencion a clientes entre otras
-                    actividades genericas como especiales.
-                    Linea: 993 160 2043
-                </p>
-                <h3>
-                    2014-2016 La norteña Grill, Suc. Galerias, 
-                    Altabrisa y sendero.
-                </h3>
-                <p>
-                    <strong>Cajero Vendedor</strong>
-                    Realize labores de venta en mostrador,
-                    elaboracion de facturas por medio de aspel,
-                    Verificacion de pedidos a provedor,
-                    Tel. Suc Sendero 357 2868
-                </p>
-                <h3>
-                    2011-2015 COBATAB plantel 24
-                </h3>
-                <p>
-                    Estudie en el Colegio de Bachilleres 
-                    de el estado de Tabasco Plantel 25,
-                    Mi principal virtud fue el trabajo en
-                    equipo.
-                    puedes conocer el
-                    <a href="http://cobatab.edu.mx/index.html"
-                    target="_blank">
-                    COBATAB</a> aqui.
-                </p>
-                <h3>
-                    2010-2011 Ensamble y Manetenimiento 
-                    de PC - Compuline Parrilla, Tab, Mex.
-                </h3>
-                <p>
-                    Tome un curso que me permitio conocer las
-                    partes fundamentales de un equipo de computo
-                    y como mantere su correcto funcionamiento.
-                </p>
-                <h3>
-                    2008-2010 Curso Operacion de Equipo de computo
-                    PC Windows
-                </h3>
-                <p>
-                    Tome curso con duracion de 2 años
-                    que me permitio el uso de herramientas
-                    de software basados en SO Windows, Aprendi
-                    las bases para usar un ordenador.
-                    Adquiri conocimientos basicos en Office,
-                    Windows, CorelDrawn, AutoCAd entre otros.
-                </p>
-
-            </div>
-        </div>
-    </oldbody>-->
-
 </html>
