We made a section called profile, We added a picture and info about skillss and about diego, we did that adding new grid sections

--- a/portfolio/curriculumn/cvdiego-vidal-lopez.html
+++ b/portfolio/curriculumn/cvdiego-vidal-lopez.html
@@ -17,8 +17,8 @@
                 </a>
             </li>
             <li>
-                <a href="#projects">
-                    Mis Trabajos
+                <a href="#trajectory">
+                    Mis Trayectoria
                 </a>
             </li>
             <li>
@@ -74,7 +74,15 @@
     <!--End Welcome Section-->
     <!--Start Projects-->
     <div id="projects" class="projects">
-        <div id="datos-personales">
+        <div id="profile-subtitle" class="profile-subitle">
+            <h2>
+                Perfil
+            </h2>
+        </div>
+        <div id="picture2" class="picture2">
+            <img src="../../images/diego-vidal/diego-sentado.jpg" alt="Imgen de diego vidal">
+        </div>
+        <div id="datos-personales" class="personal-data">
             <h2>
                 Datos personales
             </h2>
@@ -100,32 +108,29 @@
                 <strong>Email</strong>
                 diego27796gagan@gmail.com
             </p>
-        </div>
-        <div id="mi-perfil">
-            <h2>
-                Perfil
-            </h2>
             <p>
                 <Strong>Idiomas:</Strong>
                 Español (Lengua Materna)
-                Ingles (Basico - Aprendiendo 
+                Ingles (Basico - Aprendiendo
                 en la acctualidad)
             </p>
             <p>
                 <strong>Herramientas Digitales:</strong>
-                Familiraziado con Android. windows, Ubuntu 
+                Familiraziado con Android. windows, Ubuntu
                 Office, Actual mente Aprendiendo HTML y CSS
             </p>
+        </div>
+        <div id="mi-perfil" class="profile">
+            <h2>Algo mas sobre mi:</h2>
             <p id="more-about-me">
-                <strong>Algo mas sobre mi:</strong>
                 Mi trayectoria me ha permitido participar en el
                 sector alimentos, y ventas retail como promotor,
-                me encanta siempre estar aprendiendo y me satisface 
+                me encanta siempre estar aprendiendo y me satisface
                 mucho el lograr objetivos. Como persona tiendo a ser paciente
                 calmado y equilibrado. Suelo aceptar sin irritarme la mayoria
                 de las situaciones, lo cual me permite manejar trabajo bajo
                 presion simepre y con un objetivo bien definido.
-                Soy Cooperativo y colaborador por naturaleza,  se escuchar
+                Soy Cooperativo y colaborador por naturaleza, se escuchar
                 y la empatia me ayuda a armonizar las relaciones en grupos
                 de trabajo y soy eficas trabajando en equipos. Me encanta
                 compartir mis ideas de forma clara para evitar malentendidos
@@ -134,14 +139,14 @@
                 a identificar tendencias y modelos en los datos eh informacion
                 y soy eficaz haciendo preguntas claves de diagnostico antes
                 de resolver un problema o conflicto.
-                <hr>
+                
             </p>
         </div>
-        <div id="mi-trayectoria">
+        <div id="mi-trayectoria" class="trajectory">
             <h2>Mi trayectoria </h2>
             <h3>
-                2018-2020 Asesoria En Vanguardia Y Diseño 
-                MCB del Norte. 
+                2018-2020 Asesoria En Vanguardia Y Diseño
+                MCB del Norte.
             </h3>
             <p>
                 Desempeño funciones de Promotor-Demostrador
@@ -149,23 +154,23 @@
                 sucursales de la cadena LIVERPOOL.
                 Mi atencion a a los clientes
                 y mi atencion a la marca me han permitido
-                desempeñar mi trabajo con compromiso y 
+                desempeñar mi trabajo con compromiso y
                 responsabilidad!
             </p>
             <h3>
                 2016-2018 Multiservicios OG del Sureste
             </h3>
             <p>
-                realize labores como 
+                realize labores como
                 <strong>Auxiliar administrativo</strong>,
-                 Facturacion,
+                Facturacion,
                 inventarios, Capturista de datos,
                 atencion a clientes entre otras
                 actividades genericas como especiales.
                 Linea: 993 160 2043
             </p>
             <h3>
-                2014-2016 La norteña Grill, Suc. Galerias, 
+                2014-2016 La norteña Grill, Suc. Galerias,
                 Altabrisa y sendero.
             </h3>
             <p>
@@ -179,17 +184,16 @@
                 2011-2015 COBATAB plantel 24
             </h3>
             <p>
-                Estudie en el Colegio de Bachilleres 
+                Estudie en el Colegio de Bachilleres
                 de el estado de Tabasco Plantel 25,
                 Mi principal virtud fue el trabajo en
                 equipo.
                 puedes conocer el
-                <a href="http://cobatab.edu.mx/index.html"
-                target="_blank">
-                COBATAB</a> aqui.
+                <a href="http://cobatab.edu.mx/index.html" target="_blank">
+                    COBATAB</a> aqui.
             </p>
             <h3>
-                2010-2011 Ensamble y Manetenimiento 
+                2010-2011 Ensamble y Manetenimiento
                 de PC - Compuline Parrilla, Tab, Mex.
             </h3>
             <p>
@@ -210,7 +214,7 @@
                 Windows, CorelDrawn, AutoCAd entre otros.
             </p>
         </div>
-        <div class="projects-title">
+        <div id="trajectory" class="projects-title">
             <h2>
                 Aqui hay algunos de mis proyectos:
             </h2>
@@ -277,4 +281,5 @@
     <!--Ends Projects-->
 
 </body>
+
 </html>
